// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays data 1`] = `
<div>
  <div
    class="DataTable__Table-sc-1xhkibe-0 lhcMRB"
  >
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 DataTable__TableHeaderCell-sc-1xhkibe-2 gRqLRZ"
    >
      Id
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 DataTable__TableHeaderCell-sc-1xhkibe-2 gRqLRZ"
    >
      Name
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 foVggC"
    >
      1
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 foVggC"
    >
      Alice
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 foVggC"
    >
      2
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 foVggC"
    >
      Bob
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 foVggC"
    >
      3
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 foVggC"
    >
      Charlie
    </div>
  </div>
</div>
`;

exports[`displays no data 1`] = `
<div>
  <div
    class="DataTable__Table-sc-1xhkibe-0 lhcMRB"
  >
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 DataTable__TableHeaderCell-sc-1xhkibe-2 gRqLRZ"
    >
      Id
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 DataTable__TableHeaderCell-sc-1xhkibe-2 gRqLRZ"
    >
      Name
    </div>
  </div>
</div>
`;
